# flotilla

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
flotilla/: config.py  kube.py  shell.py
flotilla/dnsmasq/: __init__.py  config.py  dhcp_host.py  dhcp_range.py  hosts_config.py
flotilla/drivers/: __init__.py  amt_driver.py
flotilla/kubernetes/: control.py  host_spec.py
manifests/: crd.yml
tests/: test_config.py  test_dhcp_host.py
