[metadata]
name = pyflotilla
summary = flotilla - a node management controller
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/flotilla/flotilla
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    flotilla = flotilla.shell:main

[files]
packages =
    flotilla

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
